Add php to composer

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "jack.c.harrison@outlook.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "*"
+    }
 }
